# sql-ast-dataset

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  testsuite_runner.py
notebooks/: Example.ipynb
src/sql_ast_dataset/ast_processing/: __init__.py  ast_diff_types.py  base_ast_processor.py  factory.py  query_ast_prediction_parser.py  query_processor.py  query_processor_test.py
