[tool.poetry]
name = "sql-ast-dataset"
version = "0.0.1"
description = "SQL-AST Classification Dataset."
authors = ["Markus Pobitzer <Markus.Pobitzer1@ibm.com>"]
readme = "README.md"
packages = [
    {include="sql_ast_dataset", from="src"}
]
exclude = ["**/*_test.py"]

[tool.poetry.dependencies]
python = "^3.9"
sqlglot = "^23.12.2"
jupyter = "^1.1.1"
lab = "^8.2"

[tool.poetry.extras]
notebooks = ["jupyter", "lab"]

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^22.1.0"}
pylint = "^2.12.2"
pre-commit = "^2.17.0"
mypy = "^1.0"
isort = "^5.10.1"
flake8 = "~3.8.2"
flake8-bugbear = "~20.1.4"
flake8-comprehensions = "~3.3.0"
flake8-executable = "~2.0.4"
flake8-pyi = "~20.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.py?$'
extend-exclude = '''
/(
    \.git
  | \.pyc
)/
'''

[tool.isort]
profile = "black"
line_length = 88
py_version=38

[tool.mypy]
pretty = true
# strict = true
ignore_missing_imports = true
no_implicit_optional = true
python_version = 3.9

[[tool.mypy.overrides]]
module = "numpy"
ignore_missing_imports = true
